Updated packages to fix security advisory https://github.com/advisories/GHSA-447r-wph3-92pm
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/src/Dapr.Common/Dapr.Common.csproj
+++ b/src/Dapr.Common/Dapr.Common.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="Grpc.Net.Client" />
         <PackageReference Include="Microsoft.Extensions.Http" />
         <PackageReference Include="Microsoft.Extensions.Configuration" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
     </ItemGroup>
 
 </Project>
