--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageVersion Include="BenchmarkDotNet" Version="0.14.0" />
         <PackageVersion Include="coverlet.collector" Version="6.0.2" />
         <PackageVersion Include="coverlet.msbuild" Version="6.0.2"/>
         <PackageVersion Include="FluentAssertions" Version="5.9.0" />
@@ -26,6 +27,7 @@
         <PackageVersion Include="Microsoft.DurableTask.Client.Grpc" Version="1.3.0" />
         <PackageVersion Include="Microsoft.DurableTask.Worker.Grpc" Version="1.3.0" />
         <PackageVersion Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+        <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
         <PackageVersion Include="Microsoft.Extensions.Logging" Version="6.0.0" />
         <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.4" />
         <PackageVersion Include="Microsoft.Extensions.Http" Version="6.0.0"/>
@@ -39,6 +41,7 @@
         <PackageVersion Include="Serilog.AspNetCore" Version="6.1.0" />
         <PackageVersion Include="Serilog.Sinks.Console" Version="4.1.0" />
         <PackageVersion Include="Serilog.Sinks.File" Version="5.0.0" />
+        <PackageVersion Include="System.Formats.Asn1" Version="6.0.1" />
         <PackageVersion Include="System.Text.Json" Version="6.0.10"/>
         <PackageVersion Include="xunit" Version="2.9.2" />
         <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.2"/>
